--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -674,6 +674,20 @@ releases:
     - remove_pre-collection_version_added.yml
     - vmware_vm_config_option.yml
     release_date: '2022-03-25'
+  1.18.1:
+    changes:
+      bugfixes:
+      - vmware_cfg_backup - Fix a bug that failed the module when port 80 is blocked
+        (https://github.com/ansible-collections/community.vmware/issues/1270).
+      - vmware_host_facts - Fix a bug that crashes the module when a host is disconnected
+        (https://github.com/ansible-collections/vmware/issues/184).
+      - vmware_host_vmnic_info - Fix a bug that crashes the module when a host is
+        disconnected (https://github.com/ansible-collections/community.vmware/pull/1337).
+    fragments:
+    - 1270-vmware_cfg_backup-failed_to_write_backup_file.yaml
+    - 1337_vmware_host_vmnic_info-fix_disconnected.yml
+    - 184_vmware_host_facts.yml
+    release_date: '2022-06-07'
   1.2.0:
     changes:
       bugfixes:
