--- a/changelogs/fragments/1377-vmware_host_custom_attributes.yml
+++ b/changelogs/fragments/1377-vmware_host_custom_attributes.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_host_custom_attributes - Fix removed function to get absent working.
+  - vmware_host_custom_attributes - Fix absent function for removing custom attribute.
