--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1225,3 +1225,36 @@ releases:
     - 1337_vmware_host_vmnic_info-fix_disconnected.yml
     - 184_vmware_host_facts.yml
     release_date: '2022-06-04'
+  2.7.0:
+    changes:
+      bugfixes:
+      - vmware_content_deploy_ovf_template - Fixed a bug that ignored `resource_pool`
+        in some cases. (https://github.com/ansible-collections/community.vmware/issues/1290).
+      - vmware_content_deploy_template - Fixed a bug that ignored `resource_pool`
+        in some cases. (https://github.com/ansible-collections/community.vmware/issues/1290).
+      - vmware_guest_disk - Ignore datastores in maintenance mode (https://github.com/ansible-collections/community.vmware/pull/1321).
+      - vmware_guest_instant_clone - Support FQPN in the folder parameter.
+      - vmware_guest_network - Fix a typo in the code for SR-IOV NICs (https://github.com/ansible-collections/community.vmware/issues/1317).
+      - vmware_guest_network - Fix an `AttributeError` when using SR-IOV NICs (https://github.com/ansible-collections/community.vmware/issues/1318).
+      minor_changes:
+      - vmware_dvswitch.py - Add Netflow Settings. (https://github.com/ansible-collections/community.vmware/pull/1352)
+      - vmware_dvswitch_nioc.py - Add backupNfc and nvmetcp to the resources. (https://github.com/ansible-collections/community.vmware/pull/1351)
+      - vmware_guest_disk - Add a new disk type to support add/reconfigure/remove
+        vPMem disk (https://github.com/ansible-collections/community.vmware/pull/1382).
+      - vmware_host_passthrough - Support the PCI id in the devices parameter(https://github.com/ansible-collections/community.vmware/pull/1365).
+      - vmware_object_role_permission.py - Add StoragePod to the list of object_types.
+        (https://github.com/ansible-collections/community.vmware/pull/1338)
+      - vmware_object_role_permission_info.py - Add StoragePod and DistributedVirtalPortgroup
+        to the list of object_types. (https://github.com/ansible-collections/community.vmware/pull/1338)
+    fragments:
+    - 1317-vmware_guest_network_typo.yml
+    - 1318-vmware_guest_network-attribute_error.yml
+    - 1321-vmware_vm_info-allocaded_storag_cpu_memory_output.yaml
+    - 1338-vmware_object_role_permission-and-vmware_object_role_permission_info.yaml
+    - 1351-vmaware_dvswitch_nioc.yaml
+    - 1352-vmaware_dvswitch.yaml
+    - 1354-vmware_guest_instant_clone.yml
+    - 1362.yml
+    - 1365-vmware_host_passthrough.yml
+    - 1382-vmware_guest_disk.yml
+    release_date: '2022-07-08'
