Add SPDX-License-Identifier to module utils

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -10,7 +10,10 @@ readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
 description:
-license_file: LICENSE
+license_file: COPYING
+license:
+  - GPL-3.0-or-later
+  - BSD-2-Clause
 tags:
   - cloud
   - vmware
