vmware_guest_sendkey: allow key kombinations
Signed-off-by: Daniel Ziegenberg <daniel@ziegenberg.at>

--- a/tests/integration/targets/vmware_guest_sendkey/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_sendkey/tasks/main.yml
@@ -31,6 +31,8 @@
       - DOWNARROW
       - DOWNARROW
       - ENTER
+      - CTRL+A
+      - CTRL+ALT+W
   register: send_key
 - debug: var=send_key
 - name: assert the keys were sent to VM
