--- a/changelogs/fragments/1419-vmware_dvs_portgroup-problem_with_spec_numPorts_is_none_solved.yaml
+++ b/changelogs/fragments/1419-vmware_dvs_portgroup-problem_with_spec_numPorts_is_none_solved.yaml
@@ -1,5 +1,2 @@
 minor_changes:
-  - vmware_dvs_portgroup - AProblem with spec.numPorts is None solved (https://github.com/ansible-collections/community.vmware/pull/1419).
-  - vmware_dvswitch - Missing whitespace
-  - vmware_guest_register_operation - Missing whitespace
-  - vmware_vspan_sesseion - Missing whitespace
+  - vmware_dvs_portgroup - Fix a `spec.numPorts is None` issue when the `num_ports` parameter isn't set (https://github.com/ansible-collections/community.vmware/pull/1419).
