Remove default for network_policy and add inherit param

--- a/tests/integration/targets/vmware_vspan_session/tasks/main.yml
+++ b/tests/integration/targets/vmware_vspan_session/tasks/main.yml
@@ -42,6 +42,7 @@
     port_allocation: 'fixed'
     state: present
     network_policy:
+      inherited: false
       promiscuous: true
       forged_transmits: true
       mac_changes: true
