--- a/changelogs/fragments/1195-vmware_guest_network-remove_networks.yml
+++ b/changelogs/fragments/1195-vmware_guest_network-remove_networks.yml
@@ -1,2 +1,3 @@
 removed_features:
-  - vmware_guest_network - The deprecated parameter ``networks`` has been removed.
+  - vmware_guest_network - The deprecated parameter ``networks`` has been removed,
+    use loops to handle multiple interfaces (https://github.com/ansible-collections/community.vmware/pull/1459).
