--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1306,3 +1306,78 @@ releases:
     fragments:
     - 2.9.1-fix-release.yml
     release_date: '2022-09-07'
+  3.0.0:
+    changes:
+      breaking_changes:
+      - Removed support for ansible-core version < 2.13.0.
+      - vmware_dvs_portgroup - Add a new sub-option `inherited` to the `in_traffic_shaping`
+        parameter. This means you can keep the setting as-is by not defining the parameter,
+        but also that you have to define the setting as not `inherited` if you want
+        to override it at the PG level (https://github.com/ansible-collections/community.vmware/pull/1483).
+      - vmware_dvs_portgroup - Add a new sub-option `inherited` to the `out_traffic_shaping`
+        parameter. This means you can keep the setting as-is by not defining the parameter,
+        but also that you have to define the setting as not `inherited` if you want
+        to override it at the PG level (https://github.com/ansible-collections/community.vmware/pull/1483).
+      - vmware_dvs_portgroup - Change the type of `net_flow` to string to allow setting
+        it implicitly to inherited or to keep the value as-is. This means you can
+        keep the setting as-is by not defining the parameter, but also that while
+        `true` or `no` still work, `True` or `Off` (uppercase) won't (https://github.com/ansible-collections/community.vmware/pull/1483).
+      - vmware_dvs_portgroup - Remove support for vSphere API less than 6.7.
+      - vmware_dvs_portgroup - Remove the default for `network_policy` and add a new
+        sub-option `inherited`. This means you can keep the setting as-is by not defining
+        the parameter, but also that you have to define the setting as not `inherited`
+        if you want to override it at the PG level (https://github.com/ansible-collections/community.vmware/pull/1483).
+      - vmware_dvs_portgroup_info - Remove support for vSphere API less than 6.7.
+      - vmware_dvswitch - Remove support for vSphere API less than 6.7.
+      - vmware_dvswitch_uplink_pg - Remove support for vSphere API less than 6.7.
+      - vmware_guest_boot_manager - Remove default for ``secure_boot_enabled`` parameter
+        (https://github.com/ansible-collections/community.vmware/issues/1461).
+      - vmware_vm_config_option - Dict item names in result are changed from strings
+        joined with spaces to strings joined with underlines, e.g. `Guest fullname`
+        is changed to `guest_fullname` (https://github.com/ansible-collections/community.vmware/issues/1268).
+      - vmware_vspan_session - Remove support for vSphere API less than 6.7.
+      bugfixes:
+      - vmware_dvs_portgroup - Fix update of NetFlow Setting (https://github.com/ansible-collections/community.vmware/pull/1443).
+      - vmware_tag_manager - Fix idempotency for state `set` (https://github.com/ansible-collections/community.vmware/issues/1265).
+      minor_changes:
+      - vmware_guest_disk - Adding `iolimit` modifications of an existing disk without
+        changing size (https://github.com/ansible-collections/community.vmware/pull/1466).
+      removed_features:
+      - vca_fw - The deprecated module ``vca_fw`` has been removed.
+      - vca_nat - The deprecated module ``vca_nat`` has been removed.
+      - vca_vapp - The deprecated module ``vca_vapp`` has been removed.
+      - vmware_dns_config - The deprecated module ``vmware_dns_config`` has been removed,
+        you can use ``vmware_host_dns`` instead.
+      - vmware_guest_network - The deprecated parameter ``networks`` has been removed,
+        use loops to handle multiple interfaces (https://github.com/ansible-collections/community.vmware/pull/1459).
+      - vmware_guest_vnc - The deprecated module ``vmware_guest_vnc`` has been removed.
+        The VNC support has been dropped with vSphere 7 and later (https://github.com/ansible-collections/community.vmware/pull/1454).
+      - vmware_host_firewall_manager - The module doesn't accept a list for ``allowed_hosts``
+        anymore, use a dict instead. Additionally, ``all_ip`` is now a required sub-option
+        of ``allowed_hosts`` (https://github.com/ansible-collections/community.vmware/pull/1463).
+      - vsphere_copy - The deprecated parameters ``host`` and ``login`` have been
+        removed. Use ``hostname`` and ``username`` instead (https://github.com/ansible-collections/community.vmware/pull/1456).
+    fragments:
+    - 1195-vmware_guest_network-remove_networks.yml
+    - 1196-vmware_host_firewall_manager-remove_deprecated_stuff.yml
+    - 1196-vsphere_copy-remove_deprecated_parameters.yml
+    - 1257-vmware_guest_boot_manager-remove_secure_boot_default.yml
+    - 1265-vmware_tag_manager-set_idempotency.yml
+    - 1268-vmware_vm_config_option-change_result.yml
+    - 1443-vmware_dvs_portgroup-update_netflow_not_work.yaml
+    - 1466-vmware_guest_disk-change_iolimit_without_size.yml
+    - 1483-vmware_dvs_portgroup.yml
+    - 3.0.0-required_ansible_version.yml
+    - remove_deprecated_dns_config_module.yml
+    - remove_deprecated_vca_modules.yml
+    - remove_deprecated_vmware_guest_vnc_module.yml
+    - vmware_dvs_portgroup-securityPolicy.yml
+    - vmware_dvs_portgroup_info-securityPolicy.yml
+    - vmware_dvswitch-securityPolicy.yml
+    - vmware_dvswitch_uplink_pg-securityPolicyOverrideAllowed.yml
+    - vmware_vspan_session-securityPolicy.yml
+    modules:
+    - description: Configure Datastores
+      name: vmware_datastore
+      namespace: ''
+    release_date: '2022-10-10'
