--- a/tests/integration/targets/vmware_custom_attribute/tasks/main.yml
+++ b/tests/integration/targets/vmware_custom_attribute/tasks/main.yml
@@ -22,7 +22,7 @@
     that:
       - add_attrib_def is changed
 
-- name: add attribute definition again
+- name: add VM custom attribute definition again
   community.vmware.vmware_custom_attribute:
     validate_certs: false
     hostname: "{{ vcenter_hostname }}"
@@ -39,7 +39,7 @@
     that:
       - not (add_attrib_def is changed)
 
-- name: remove attribute definition
+- name: remove VM custom attribute definition
   community.vmware.vmware_custom_attribute:
     validate_certs: false
     hostname: "{{ vcenter_hostname }}"
@@ -56,13 +56,81 @@
     that:
       - remove_attrib_def is changed
 
-- name: remove attribute definition again
+- name: remove VM custom attribute definition again
   community.vmware.vmware_custom_attribute:
     validate_certs: false
     hostname: "{{ vcenter_hostname }}"
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     object_type: VirtualMachine
+    custom_attribute: sample_5
+    state: absent
+  register: remove_attrib_def
+
+- debug: var=remove_attrib_def
+
+- assert:
+    that:
+      - not (remove_attrib_def is changed)
+
+- name: add Global custom attribute definition
+  community.vmware.vmware_custom_attribute:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    object_type: Global
+    custom_attribute: sample_5
+    state: present
+  register: add_attrib_def
+
+- debug: var=add_attrib_def
+
+- assert:
+    that:
+      - add_attrib_def is changed
+
+- name: add Global custom attribute definition again
+  community.vmware.vmware_custom_attribute:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    object_type: Global
+    custom_attribute: sample_5
+    state: present
+  register: add_attrib_def
+
+- debug: var=add_attrib_def
+
+- assert:
+    that:
+      - not (add_attrib_def is changed)
+
+- name: remove Global custom attribute definition
+  community.vmware.vmware_custom_attribute:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    object_type: Global
+    custom_attribute: sample_5
+    state: absent
+  register: remove_attrib_def
+
+- debug: var=remove_attrib_def
+
+- assert:
+    that:
+      - remove_attrib_def is changed
+
+- name: remove Global custom attribute definition again
+  community.vmware.vmware_custom_attribute:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    object_type: Global
     custom_attribute: sample_5
     state: absent
   register: remove_attrib_def
