Remove version 2.10.3 from galaxy.yml

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,7 +5,7 @@ name: vmware
 # https://github.com/ansible-network/releases/tree/master/ansible_releases/cmd
 # A script based on https://pypi.org/project/pbr/ will generate the version
 # key. The version value depends on the tag or the last git tag.
-version: 2.10.3
+version: null
 readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
