Add missing version_added and fix changelog fragment

--- a/changelogs/fragments/1223-cross_vc_clone_timeout.yml
+++ b/changelogs/fragments/1223-cross_vc_clone_timeout.yml
@@ -1,4 +1,4 @@
 bugfixes:
-  - vmware_cross_vc_clone - New parameter timeout in order to allow clone running longer than 1 hour
-  - vmware_cross_vc_clone - Fix vim.fault.NotAuthenticated issue
+  - vmware_guest_cross_vc_clone - New parameter timeout in order to allow clone running longer than 1 hour
+  - vmware_guest_cross_vc_clone - Fix vim.fault.NotAuthenticated issue
     (https://github.com/ansible-collections/community.vmware/issues/1223).
